added matplotlib to requirements

--- a/intro_data_science/part_1/ds_part_1.ipynb
+++ b/intro_data_science/part_1/ds_part_1.ipynb
@@ -2248,6 +2248,27 @@
    "source": [
     "https://jakevdp.github.io/PythonDataScienceHandbook/02.05-computation-on-arrays-broadcasting.html"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot sin and cos on the same graph, using matplotlib\n",
+    "# Compute the x and y coordinates for points on sine and cosine curves \n",
+    "\n",
+    "# Set up a subplot grid that has height 2 and width 1, \n",
+    "# and set the first such subplot as active. \n",
+    "\n",
+    "# Make the first plot \n",
+    "   \n",
+    "# Set the second subplot as active, and make the second plot. \n",
+    "\n",
+    "# Ensure tight layout\n",
+    "   \n",
+    "# Show the figure. "
+   ]
   }
  ],
  "metadata": {
