--- a/intro_data_science/part_1/ds_part_1_complete.ipynb
+++ b/intro_data_science/part_1/ds_part_1_complete.ipynb
@@ -19,7 +19,8 @@
     "import numpy as np\n",
     "from IPython.display import Image\n",
     "import time\n",
-    "from sys import getsizeof"
+    "from sys import getsizeof\n",
+    "import matplotlib.pyplot"
    ]
   },
   {
@@ -2404,7 +2405,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Plot sin and cos on the same graph, using matplotlib\n",
+    "# Compute the x and y coordinates for points on sine and cosine curves \n",
+    "x = np.arange(0, 5 * np.pi, 0.1) \n",
+    "y_sin = np.sin(x) \n",
+    "y_cos = np.cos(x)  \n",
+    "   \n",
+    "# Set up a subplot grid that has height 2 and width 1, \n",
+    "# and set the first such subplot as active. \n",
+    "plt.subplot(2, 1, 1)\n",
+    "   \n",
+    "# Make the first plot \n",
+    "plt.plot(x, y_sin) \n",
+    "plt.title('Sine')  \n",
+    "   \n",
+    "# Set the second subplot as active, and make the second plot. \n",
+    "plt.subplot(2, 1, 2) \n",
+    "plt.plot(x, y_cos) \n",
+    "plt.title('Cosine')  \n",
+    "\n",
+    "# Ensure tight layout\n",
+    "plt.tight_layout()\n",
+    "   \n",
+    "# Show the figure. \n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
