added symlink, minor tweak to data 2 notebooks

--- a/intro_data_science/part_2/ds_part_2.ipynb
+++ b/intro_data_science/part_2/ds_part_2.ipynb
@@ -69,7 +69,6 @@
     "\n",
     "# Emissions data for Russia\n",
     "russia_emissions = [1613.523, 1613.523, 1679.385, 1618.434, 1617.678, 1622.498, 1617.653, 1647.041, 1710.688]\n",
-    "plt.plot(years, russia_emissions, label='Russia', color='purple')\n",
     "\n",
     "# Add style to the x ticks\n",
     "\n",
@@ -90,7 +89,7 @@
   },
   {
    "source": [
-    "Looks pretty good! But it's hard to see the relationship between Russia and the other countries. Let's transform this into a bar plot."
+    "Looks pretty good! But it's hard to see the relationship between Russia and the other countries. Let's transform this into a bar graph."
    ],
    "cell_type": "markdown",
    "metadata": {}
