--- a/intro_data_science/part_2/ds_part_2_complete.ipynb
+++ b/intro_data_science/part_2/ds_part_2_complete.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "source": [
-    "Looks pretty good! But it's hard to see the relationship between Russia and the other countries. Let's transform this into a bar plot."
+    "Looks pretty good! But it's hard to see the relationship between Russia and the other countries. Let's transform this into a bar graph."
    ],
    "cell_type": "markdown",
    "metadata": {}
