--- a/intro_data_science/part_3/ds_part_3.ipynb
+++ b/intro_data_science/part_3/ds_part_3.ipynb
@@ -25,7 +25,7 @@
   {
    "source": [
     "# A Brief Introduction to Pandas\n",
-    "### Wrangling data with Python\n",
+    "### Part 1\n",
     "\n",
     "In this notebook, we will cover the basics of Pandas, a dynamic, powerful Python library that is ubiquitous in the field of Data Science. It has robust I/O functionality and makes working with data a lot simpler than doing so in Excel. Let's get stared."
    ],
