--- a/intro_data_science/part_3/ds_part_3_complete.ipynb
+++ b/intro_data_science/part_3/ds_part_3_complete.ipynb
@@ -25,7 +25,7 @@
   {
    "source": [
     "# A Brief Introduction to Pandas\n",
-    "### Wrangling data with Python\n",
+    "### Part 1\n",
     "\n",
     "In this notebook, we will cover the basics of Pandas, a dynamic, powerful Python library that is ubiquitous in the field of Data Science. It has robust I/O functionality and makes working with data a lot simpler than doing so in Excel. Let's get stared."
    ],
@@ -1405,284 +1405,6 @@
     "# Alternative, using .between()\n",
     "income_query_alt = eur_data_final.median_income.between(10_000, 20_000, inclusive=True)\n",
     "eur_data_final[income_query_alt]"
-   ]
-  },
-  {
-   "source": [
-    "## 3.1 Selection\n",
-    "Using .loc(), .iloc()"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Data from the eur_data_final df, represented as a python dictionary\n",
-    "countries_dict = {\n",
-    "    15: {'country': 'Italy', \n",
-    "         'unemp_rate': 11.7, \n",
-    "         'gdp': 1689824.0, \n",
-    "         'median_income': 16237, \n",
-    "         'total_pop': 59433744\n",
-    "        }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'Italy'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 53
-    }
-   ],
-   "source": [
-    "# With vanilla python, how do we get the word 'Italy' from a dictionary?\n",
-    "countries_dict[15]['country']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'Italy'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 54
-    }
-   ],
-   "source": [
-    "# How do we do this with a dataframe?\n",
-    "eur_data_final.loc[15, 'country']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "country        Italy\n",
-       "gdp        1689824.0\n",
-       "Name: 15, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 55
-    }
-   ],
-   "source": [
-    "# We can also get multiple columns\n",
-    "eur_data_final.loc[15, ['country', 'gdp']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "country           Hungary\n",
-       "unemp_rate            5.1\n",
-       "gdp              113903.8\n",
-       "median_income        8267\n",
-       "total_pop         9937628\n",
-       "Name: 12, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 56
-    }
-   ],
-   "source": [
-    "# Or an entire row/entry\n",
-    "eur_data_final.loc[12]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "    country        gdp\n",
-       "9    France  2228568.0\n",
-       "10  Germany  3159750.0"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>gdp</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>9</th>\n      <td>France</td>\n      <td>2228568.0</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>Germany</td>\n      <td>3159750.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 57
-    }
-   ],
-   "source": [
-    "# Or multiple rows and columns\n",
-    "eur_data_final.loc[[9,10], ['country','gdp']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "    country        gdp\n",
-       "9    France  2228568.0\n",
-       "10  Germany  3159750.0\n",
-       "11   Greece   176487.9\n",
-       "12  Hungary   113903.8\n",
-       "13  Iceland    18646.1\n",
-       "14  Ireland   273238.2"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>gdp</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>9</th>\n      <td>France</td>\n      <td>2228568.0</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>Germany</td>\n      <td>3159750.0</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>Greece</td>\n      <td>176487.9</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>Hungary</td>\n      <td>113903.8</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>Iceland</td>\n      <td>18646.1</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>Ireland</td>\n      <td>273238.2</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 58
-    }
-   ],
-   "source": [
-    "# We can also use python's index slicing syntax\n",
-    "eur_data_final.loc[9:14, ['country','gdp']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "unemp_rate          8.0\n",
-       "gdp             40357.2\n",
-       "total_pop     2050189.0\n",
-       "Name: Slovenia, dtype: float64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 59
-    }
-   ],
-   "source": [
-    "# Select by column value (Pandas is smart!)\n",
-    "eur_data_country_index.loc['Slovenia']"
-   ]
-  },
-  {
-   "source": [
-    "### Exercise - What countries have a higher unemployment rate than Slovenia and have a lowercase 't' in their name?"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "     country  unemp_rate        gdp  median_income  total_pop\n",
-       "3    Croatia        13.1    46639.5           8985    4284889\n",
-       "15     Italy        11.7  1689824.0          16237   59433744\n",
-       "16    Latvia         9.6    25037.7           9257    2070371\n",
-       "23  Portugal        11.2   186480.5          10805   10562178"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>country</th>\n      <th>unemp_rate</th>\n      <th>gdp</th>\n      <th>median_income</th>\n      <th>total_pop</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3</th>\n      <td>Croatia</td>\n      <td>13.1</td>\n      <td>46639.5</td>\n      <td>8985</td>\n      <td>4284889</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>Italy</td>\n      <td>11.7</td>\n      <td>1689824.0</td>\n      <td>16237</td>\n      <td>59433744</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>Latvia</td>\n      <td>9.6</td>\n      <td>25037.7</td>\n      <td>9257</td>\n      <td>2070371</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>Portugal</td>\n      <td>11.2</td>\n      <td>186480.5</td>\n      <td>10805</td>\n      <td>10562178</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 60
-    }
-   ],
-   "source": [
-    "# Select slovenia unemployment values\n",
-    "slovenia_unemployment = eur_data_country_index.loc['Slovenia', 'unemp_rate']\n",
-    "# Generate comparison query\n",
-    "gt_slov = eur_data_final.unemp_rate > slovenia_unemployment\n",
-    "# Generate 'contains' query\n",
-    "t_names = eur_data_final.country.str.contains('t')\n",
-    "# Make selection using queries\n",
-    "eur_data_final[gt_slov & t_names]"
-   ]
-  },
-  {
-   "source": [
-    "### Exercise - Generate a correlation matrix for the various columns and plot them using matplotlib"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'plt' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-9a0f45153545>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Make subplot and figure\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Generate correlation matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Select columns\n",
-    "cols = eur_data_final.columns\n",
-    "\n",
-    "# Make subplot and figure\n",
-    "fig, ax = plt.subplots(1, 1)\n",
-    "\n",
-    "# Generate correlation matrix\n",
-    "corr_data = eur_data_final.corr()\n",
-    "\n",
-    "# Generate matplotlib plot\n",
-    "cax = ax.matshow(corr_data) \n",
-    "\n",
-    "# Add colorbar to figure\n",
-    "fig.colorbar(cax)\n",
-    "\n",
-    "# Set tick labels\n",
-    "ax.set_xticklabels(cols)\n",
-    "ax.set_yticklabels(cols)\n",
-    "\n",
-    "fig.tight_layout()"
    ]
   }
  ]
