--- a/tidyverse/part1/index.Rmd
+++ b/tidyverse/part1/index.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Tidyverse Tibbles and Bits"
 subtitle: "Bioinformatics Coffee Hour"
-date: "May 5, 2020"
-author: "Brian Arnold"
+date: "Mar 2, 2021"
+author: "Danielle Khost; Brian Arnold"
 output: html_document
 ---
 
@@ -48,6 +48,8 @@ Let's load in some data to use:
 ```{r}
 housing<-read.csv("https://raw.githubusercontent.com/datasets/house-prices-us/master/data/cities-month.csv", stringsAsFactors=F, strip.white = T)
 housing=housing[c(1:(length(housing)-3),length(housing))]
+
+View(housing)
 ```
 
 ### Tibbles
@@ -57,8 +59,10 @@ The tidyverse uses its own version of the data frame (from base R) that is simil
 ```{r}
 df1<-data.frame(label=c("rep1", "rep2", "rep3", "rep4"), data=c(23, 34, 15, 19))
 
-tbdf1 <- as.tibble(df1)
+tbdf1 <- as_tibble(df1)
 tbdf1
+
+class(tbdf1)
 ```
 
 You see here that just printing the tibble to screen displays the data types in each of the columns and the dimensions. Although not apparent with this small dataset, another very handy feature of tibbles is that by default they will only print out the first 10 rows and as many columns as fit in your window. Many packages will accept tibbles instead of data frames with no problems, but if you come across an older package that requires a data frame, it is easy to revert with the `as.data.frame()` function.
@@ -69,7 +73,13 @@ One important piece of syntax is the %>% operator, which acts like a Unix pipe i
 
 ---
 
-If we look at the dataset we just downloaded, we can see that it is not in proper long, tidy format. Let's polish it using some tidyr functions so that it is easier to work with.
+If we look at the dataset we just downloaded, we can see that it is not in proper long, tidy format.
+
+```{r, echo = TRUE}
+View(housing)
+```
+
+Let's polish it using some tidyr functions so that it is easier to work with.
 
 ## Going from wide to long: pivot_longer()
 The pivot_longer() function takes a tibble (or data frame) and lengthens it, i.e. increases the number of rows and decreases number of columns:
@@ -77,7 +87,8 @@ The pivot_longer() function takes a tibble (or data frame) and lengthens it, i.e
 ```{r, echo = TRUE}
 housing_clean <- housing %>% as_tibble %>%
   pivot_longer(cols=c(-Date, -National.US), names_to="location", values_to="local_index")
-  View(housing_clean)
+
+View(housing_clean)
 ```
 
 The **cols** argument describes what columns need to be reshaped, i.e. which need to be converted into columns. For us, we want to keep the US national average and the date as columns. We give it a list using the **c** ombine function, and by putting an **-** in front of the column names, we tell it to reshape every column *except* Date and National.US
@@ -86,26 +97,37 @@ The **names_to** argument gives a name for the new variable (i.e. column) that s
 
 The **values_to** argument gives a name for the new variable (i.e. column) that stores the data that was in the cell values, which for us was the local index values in each city.
 
+
 ## Turning a column into multiple columns: separate()
-The separate() function separates a single character named column into several, splitting on a given regular expression. In the following command we run the function twice, separating two different columns:
+The separate() function separates a single character column into several, splitting on a given regular expression. In the following command we run the function twice, separating two different columns:
 
 ```{r, echo = TRUE}
 housing_clean2 <- housing_clean %>%
-  separate(location, c("state", "city"),extra="merge") %>%
-  separate(Date, c("year", "month"), extra="drop", remove=F)
+  separate(Date, into=c("year", "month"), extra="drop", remove=F) %>%
+  separate(location, into=c("state", "city"),extra="merge")
 
 View(housing_clean2)
 ```
 
+The first argument is the name of the column in the tibble that we are separating ("location" for the first command, "Date" for the second).
 
-Putting it all together:
+The **into** argument gives the names (as a character vector) of the columns that we are separating into, i.e. what the names of the new columns will be. Note that the number of elements in the vector determine how many columns the target column will be split into (in this case, two).
+
+The **extra** argument tells the function what to do with the "pieces" that are leftover after splitting. "Merge" tells the function to add the leftover pieces back to the final column; "drop" discards them.
+
+To better understand this, we should look at how separate() splits a character column. You might be wondering how separate() "knows" to split our columns on a period ("."). This is because by default, separate() splits on every non-alphanumeric character (e.g. space, period, dash, etc.) given a character vector. This is controlled by the **sep** argument, which we did not included in our code so separate() just uses the default (remember to get the whole list of arguments for a function, you can type ?functionname, e.g. ?separate).
+
+Finally, the **remove** argument determines whether the original column is retained or not (defaults to TRUE). So for our data, the original "location" column is discarded and we keep only the split columns, while the original "Date" column is retained along with its children.
+
+Now let's put it all together. We could do things one function at a time, as above, but it is much cleaner and easier to read if we create our final, cleaned dataset in a single pipeline:
 
 ```{r, echo = TRUE}
 housing_clean <- housing %>% as_tibble %>%
   pivot_longer(cols=c(-Date, -National.US), names_to="location", values_to="local_index") %>%
-  separate(location, c("state", "city"),extra="merge") %>%
   separate(Date, c("year", "month"), extra="drop", remove=F) %>%
-  print
+  separate(location, c("state", "city"),extra="merge")
+
+View(housing_clean)
 ```
 
 We can observe the differences between housing and housing_clean to see what's being done here, and a more in-depth description of what these functions do can be found in the cheat sheet.
@@ -140,7 +162,7 @@ housing_clean %>% arrange(year, month, state, city) %>%
   select(year, month, city, state, local_index, national_index = National.US)
 ```
 
-distinct() is like unique(), and can be used to identify all unique values in your call set:
+distinct() can be used to identify all unique values in your call set:
 
 ```{r}
 housing_clean %>%
@@ -148,7 +170,7 @@ housing_clean %>%
   distinct
 ```
 
-mutate() creates new columns, or updates existing ones, while keeping everthing else unchanged (transmute does the same but drops other columns).
+mutate() is an especially useful function that can do a variety of things, usually in combination with other functions. It can create new columns or update existing ones, while keeping everthing else unchanged. For instance, say we want to change our "month" column from the integer value to the three letter abbreviation:
 
 ```{r}
 housing_clean %>% arrange(year, month, state, city) %>%
@@ -156,18 +178,30 @@ housing_clean %>% arrange(year, month, state, city) %>%
   mutate(month = month.abb[as.integer(month)])
 ```
 
-We can include several mutate calls at once:
+R has several built-in constants, one of which is this "month.abb" function, which has the three letter abbreviations of the months in the Gregorian calendar. What this mutate() call is doing is passing the values of the month column as integers to the month.abb function, which then automatically converts them to their appropriate abbreviations.
+
+Let's look at some other things mutate() can do. We can include several mutate calls at once:
+
+```{r}
+housing_clean %>% arrange(year, month, state, city) %>%
+  select(year, month, city, state, local_index, national_index = National.US) %>%
+  mutate(month = month.abb[as.integer(month)], city=sub(".", "_", city, fixed=TRUE), rel_index=local_index/national_index)
+```
+
+This command uses mutate() three times:
+1) The first changes the months, as above
+
+2) In the second mutate() call, we are pairing mutate() with the sub() function, which substitutes characters in a string; we are telling substitute to replace all "." characters with a "_" character for the "city" character vector (i.e. our city column)
+
+3) In the third mutate() call, we are using mutate to create an entirely new column called "rel_index", whose value is local_index / national_index
+
+
+Now that we've gone through all the dplyr functions, let's update our nice clean housing dataset.
 
 ```{r}
 housing_clean <- housing_clean %>% arrange(year, month, state, city) %>%
   select(year, month, city, state, local_index, national_index = National.US) %>%
-  mutate(month = month.abb[as.integer(month)], city=sub(".", "_", city, fixed=TRUE), rel_index = local_index/national_index)
-```
-
-Note the reassignment. Let's save housing_clean as a new object to use next time. We will write it to a csv file with write_csv.
-
-```{r}
-write_csv(housing_clean,"housing_dataset_clean.csv")
+  mutate(month = month.abb[as.integer(month)], city=sub(".", "_", city, fixed=TRUE), rel_index=local_index/national_index)
 ```
 
 
